option(BUILD_HELLO_WORLD_SAMPLE "Building a Hello World sample plugin" ON)
if(NOT BUILD_HELLO_WORLD_SAMPLE)
  return()
endif()

if(CMAKE_PROJECT_NAME STREQUAL "Choreonoid")
  # Build inside the Choreonoid project
  set(target CnoidHelloWorldPlugin)
  choreonoid_add_plugin(${target} HelloWorldPlugin.cpp)
  # target_link_libraries(${target} CnoidBase)
  apply_common_setting_for_plugin(${target})

else()
  # Stand alone build
  cmake_minimum_required(VERSION 3.1.0)
  project(HelloWorldPlugin)
  find_package(Choreonoid REQUIRED)
  add_definitions(${CHOREONOID_COMPILE_DEFINITIONS})
  include_directories(${CHOREONOID_INCLUDE_DIRS})
  link_directories(${CHOREONOID_LIBRARY_DIRS})
  set(target CnoidHelloWorldPlugin)
  add_library(${target} SHARED HelloWorldPlugin.cpp)
  target_link_libraries(${target} ${CHOREONOID_BASE_LIBRARIES})
  install(TARGETS ${target} LIBRARY DESTINATION ${CHOREONOID_PLUGIN_DIR})
endif()
